--- a/Solar System Simulator.vcxproj
+++ b/Solar System Simulator.vcxproj
@@ -132,10 +132,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Solar System Simulator.cpp" />
+    <Text Include="Documenation.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Documenation.txt" />
+    <None Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Solar System Simulator.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
