added definition for the force map that will contain information about the force between two bodies and when we should recalculate

--- a/Solar System Simulator.vcxproj.filters
+++ b/Solar System Simulator.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClInclude Include="include\utils\Utilities_Constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\utils\PairDefinitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
