--- a/Solar System Simulator.vcxproj
+++ b/Solar System Simulator.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="include\celestial\SolarSystemModel.h" />
     <ClInclude Include="include\celestial\Star.h" />
     <ClInclude Include="include\utils\MathUtils.h" />
+    <ClInclude Include="include\utils\PairDefinitions.h" />
     <ClInclude Include="include\utils\Position.h" />
     <ClInclude Include="include\utils\Utilities_Constants.h" />
   </ItemGroup>
