Introduced the concept of a vector to replace Position and to replace just using pure Newtons to describe force. Implemented logic for calcualting the forces for pairs, determining when to recalculate the forces, added a scoring system based on the force, and added logic to compute net force on a celestial body and determine where it will be moved to based on that net force.

--- a/Solar System Simulator.vcxproj
+++ b/Solar System Simulator.vcxproj
@@ -140,7 +140,7 @@
     <ClCompile Include="src\celestial\Star.cpp" />
     <ClCompile Include="src\Solar System Simulator.cpp" />
     <ClCompile Include="src\utils\MathUtils.cpp" />
-    <ClCompile Include="src\utils\Position.cpp" />
+    <ClCompile Include="src\utils\Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\celestial\CelestialBody.h" />
@@ -148,8 +148,8 @@
     <ClInclude Include="include\celestial\Star.h" />
     <ClInclude Include="include\utils\MathUtils.h" />
     <ClInclude Include="include\utils\PairDefinitions.h" />
-    <ClInclude Include="include\utils\Position.h" />
-    <ClInclude Include="include\utils\Utilities_Constants.h" />
+    <ClInclude Include="include\utils\UtilitiesNamespace.h" />
+    <ClInclude Include="include\utils\Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
