--- a/Solar System Simulator.vcxproj.filters
+++ b/Solar System Simulator.vcxproj.filters
@@ -28,10 +28,10 @@
     <ClCompile Include="src\utils\MathUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\utils\Position.cpp">
+    <ClCompile Include="src\celestial\SolarSystemModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\celestial\SolarSystemModel.cpp">
+    <ClCompile Include="src\utils\Vector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -45,16 +45,16 @@
     <ClInclude Include="include\utils\MathUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\utils\Position.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\celestial\SolarSystemModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\utils\Utilities_Constants.h">
+    <ClInclude Include="include\utils\UtilitiesNamespace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\utils\PairDefinitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\utils\Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
