Began setting up graphics logic and classes which is an absolute nightmare. dont even remember how much stuff I ended up changing but it was certainly a lot

--- a/Solar System Simulator.vcxproj
+++ b/Solar System Simulator.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Development\Libraries\glfw-3.3.9.bin.WIN64\include;C:\Development\Libraries\glew-2.1.0\include;$(ProjectDir)include;$(ProjectDir)include\celestial;$(ProjectDir)include\util;$(ProjectDir)include\renderer</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Development\Libraries\glfw-3.3.9.bin.WIN64\include;C:\Development\Libraries\glew-2.1.0\include;C:\Development\Libraries\glm-master;$(ProjectDir)include;$(ProjectDir)include\celestial;$(ProjectDir)include\util;$(ProjectDir)include\renderer</IncludePath>
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);C:\Development\Libraries\glfw-3.3.9.bin.WIN64\lib-vc2019;C:\Development\Libraries\glew-2.1.0\lib\Release\x64</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -108,6 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,18 +137,25 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\celestial\CelestialBody.cpp" />
+    <ClCompile Include="src\celestial\Planet.cpp" />
     <ClCompile Include="src\celestial\SolarSystemModel.cpp" />
     <ClCompile Include="src\celestial\Star.cpp" />
     <ClCompile Include="src\Solar System Simulator.cpp" />
+    <ClCompile Include="src\utils\GeometryManager.cpp" />
     <ClCompile Include="src\utils\MathUtils.cpp" />
+    <ClCompile Include="src\utils\ShaderUtils.cpp" />
     <ClCompile Include="src\utils\Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\celestial\CelestialBody.h" />
+    <ClInclude Include="include\celestial\Planet.h" />
     <ClInclude Include="include\celestial\SolarSystemModel.h" />
     <ClInclude Include="include\celestial\Star.h" />
+    <ClInclude Include="include\utils\GeometryManager.h" />
     <ClInclude Include="include\utils\MathUtils.h" />
     <ClInclude Include="include\utils\PairDefinitions.h" />
+    <ClInclude Include="include\utils\ShaderUtils.h" />
     <ClInclude Include="include\utils\UtilitiesNamespace.h" />
     <ClInclude Include="include\utils\Vector.h" />
   </ItemGroup>
