Enabling the ability to read in details about the celestial bodies. the goal is to modify this to where we will first call an api to load the data into the json and then we load in the json. if we cannot make the api call then we will just default to whatever the json already has

--- a/Solar System Simulator.vcxproj.filters
+++ b/Solar System Simulator.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="src\utils\GeometryManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils\CelestialBodyJSONLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\celestial\CelestialBody.h">
@@ -79,6 +82,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\utils\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\utils\CelestialBodyJSONLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
