--- a/Solar System Simulator.vcxproj
+++ b/Solar System Simulator.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="src\celestial\SolarSystemModel.cpp" />
     <ClCompile Include="src\celestial\Star.cpp" />
     <ClCompile Include="src\Solar System Simulator.cpp" />
+    <ClCompile Include="src\utils\CelestialBodyJSONLoader.cpp" />
     <ClCompile Include="src\utils\GeometryManager.cpp" />
     <ClCompile Include="src\utils\MathUtils.cpp" />
     <ClCompile Include="src\utils\ShaderUtils.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="include\celestial\SolarSystemModel.h" />
     <ClInclude Include="include\celestial\Star.h" />
     <ClInclude Include="include\utils\Camera.h" />
+    <ClInclude Include="include\utils\CelestialBodyJSONLoader.h" />
     <ClInclude Include="include\utils\GeometryManager.h" />
     <ClInclude Include="include\utils\MathUtils.h" />
     <ClInclude Include="include\utils\PairDefinitions.h" />
